# libzip

./: .gitignore  CMakeLists.txt
chef/: libzip.yaml
sample/: main.cpp
src/: CMakeLists.txt
src/compression/bzip2/: bzip2_decoder.h  bzip2_encoder.h
src/compression/deflate/: deflate_decoder.h  deflate_encoder.h
src/compression/lzma/: lzma_decoder.h  lzma_encoder.h  lzma_encoder_properties.h
src/compression/lzma/detail/: lzma_alloc.h  lzma_handle.h  lzma_header.h  lzma_in_stream.h  lzma_out_stream.h
src/compression/store/: store_decoder.h  store_encoder.h
src/extlibs/bzip2/: CMakeLists.txt  bzlib.h
src/extlibs/lzma/: CMakeLists.txt  CpuArch.h  Threads.c  Threads.h  ThreadsP.c  ThreadsP.h  ThreadsV.c  ThreadsV.h  XzDec.c
src/extlibs/zlib/: CMakeLists.txt  gzguts.h  zconf.h
src/streams/streambuffs/: crc32_streambuf.h  zip_crypto_streambuf.h
src/utils/: time_utils.h
utils/: CMakeLists.txt  pakbuild.cpp  ziputil.cpp
